There is no need to fix overlaps
The student numbers are hidden under bars and can no longer overlap.

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -620,7 +620,6 @@ td.sorted {
   position: absolute;
   color: rgba(0,0,0,.75);
   right: 0;
-  z-index: 50;
   padding: 0 3px;
   visibility: hidden;
 }
